guacamole: overlay: invert ims sims
Signed-off-by: Pranav <npv12@iitbbs.ac.in>

--- a/overlay-derp/frameworks/base/packages/SystemUI/res/values/config.xml
+++ b/overlay-derp/frameworks/base/packages/SystemUI/res/values/config.xml
@@ -24,4 +24,7 @@
     <integer name="config_maxVisibleNotificationIcons">6</integer>
     <integer name="config_maxVisibleNotificationIconsOnLock">7</integer>
 
+    <!-- Whether to invert the sim slots for VoLTE/VoWiFi icon -->
+    <bool name="config_invertImsSlots">true</bool>
+
 </resources>
