guacamole: Add fod overlays
Signed-off-by: Pranav <npv12@iitbbs.ac.in>

--- a/overlay-derp/frameworks/base/packages/SystemUI/res/values/config.xml
+++ b/overlay-derp/frameworks/base/packages/SystemUI/res/values/config.xml
@@ -26,5 +26,8 @@
 
     <!-- Whether to invert the sim slots for VoLTE/VoWiFi icon -->
     <bool name="config_invertImsSlots">true</bool>
+    
+    <!-- Color of the UDFPS Pressed view -->
+    <color name="config_udfpsColor">#00ff00</color>
 
 </resources>
