--- a/overlay/packages/apps/Settings/res/values/derp_strings.xml
+++ b/overlay/packages/apps/Settings/res/values/derp_strings.xml
@@ -12,6 +12,6 @@
 -->
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
 
-    <string name="maintainer_name">Daemon</string>
+    <string name="maintainer_name">Alexander Brunswig (NurKeinNeid)</string>
 
 </resources>
