--- a/overlay/OPlusFrameworksResTarget/res/values/config.xml
+++ b/overlay/OPlusFrameworksResTarget/res/values/config.xml
@@ -236,4 +236,6 @@
         <item>137</item>  <!-- <item>sensorRadius</item> -->
     </integer-array>
 
+    <!-- Path to dash charging status file -->
+    <string name="config_oemFastChargerStatusPath">/sys/class/power_supply/battery/fastcharger</string>
 </resources>
