--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -233,14 +233,9 @@
     <!-- The default refresh rate -->
      <!-- The properties of a UDFPS sensor in pixels, in the order listed below: -->
      <integer-array name="config_udfps_sensor_props" translatable="false" >
-      <!--
-        <item>sensorLocationX</item>
-        <item>sensorLocationY</item>
-        <item>sensorRadius</item>
-      -->
-        <item>720</item>
-        <item>2728</item>
-        <item>110</item>
+        <item>720</item> <!-- sensorLocationX -->
+        <item>2728</item> <!-- sensorLocationY -->
+        <item>137</item> <!-- sensorRadius -->
      </integer-array>
 
      <!-- How long it takes for the HW to start illuminating after the illuminati -->
