--- a/overlay-derp/frameworks/base/packages/SystemUI/res/values/config.xml
+++ b/overlay-derp/frameworks/base/packages/SystemUI/res/values/config.xml
@@ -28,7 +28,7 @@
     <bool name="config_invertImsSlots">true</bool>
     
     <!-- Color of the UDFPS Pressed view -->
-    <color name="config_udfpsColor">#00ffffff</color>
+    <color name="config_udfpsColor">#00ff00</color>
 
     <integer name="config_udfps_hbm_type">0</integer>
 
