guacamole: set proper FOD animation size and offset

--- a/overlay/OPlusSystemUIResTarget/res/values/dimens.xml
+++ b/overlay/OPlusSystemUIResTarget/res/values/dimens.xml
@@ -23,4 +23,8 @@
     <!-- Location on the screen of the center of the physical power button. -->
     <dimen name="physical_power_button_center_screen_location_y">1250px</dimen>
 
+    <!-- Recognizing fingerprint animation -->
+    <dimen name="udfps_animation_size">176dp</dimen>
+    <dimen name="udfps_animation_offset">28dp</dimen>
+
 </resources>
